--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "4.0.0",
     "redux": "4.1.0",
     "redux-devtools-extension": "2.13.9",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
